# MyCDR

./: .CDR_IN_FORMAT.config.swp  .gitignore  CDR_IN_FORMAT.CNF  CDR_IN_FORMAT.config  CDR_IN_FORMAT.config~  Copy of CDR_IN_FORMAT.config  MyCDR.sln  nortel1.nut  seimens1.nut
Debug/: CDR.CNF  CDR_IN_FORMAT.CNF  MyCDR.exp  MyCDR.lib
IN/: CDR_IN_FORMAT.CNF
MyCDR/: CDRTypes.h  CDR_IN_FORMAT.CNF  CharRecord.cpp  CharRecord.h  CharRecordContainer.cpp  CharRecordContainer.h  CharRecordIteraor.cpp  CharRecordIteraor.h  Config.cpp  Config.h  DBConfig.cpp  DBConfig.h  DBConfigMySQL.cpp  DBConfigMySQL.h  DBConfigODBC.cpp  DBConfigODBC.h  DBConfigSQLLITE.cpp  DBConfigSQLLITE.h  DirMoniter.cpp  DirMoniter.h  Driver.cpp  Driver.h  FileReader.cpp  FileReader.h  FileReaderStrategy.cpp  FileReaderStrategy.h  FixedLocationRecord.cpp  FixedLocationRecord.h  FixedRecordContainer.cpp  FixedRecordContainer.h  FixedRecordIteraor.cpp  FixedRecordIteraor.h  GeneralRecord.cpp  GeneralRecord.h  Logger.cpp  Logger.h  MMapFileReader.cpp  MMapFileReader.h  MyCDR.cpp  MyCDR.vcxproj  (+27 more)
MyCDR/CSV/: 3.txt
MyCDR/FIX/: 1.txt  3.txt
MyCDR/LOG/: 1856_log_1327141238.txt  2164_log_1327758818.txt  4260_log_1327758694.txt  4736_log_1327330086.txt  5668_log_1327330086.txt  5996_log_1327141222.txt  log.txt  (+3 more)
asn1/vdchunk-base-0.2.10/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  configure  configure.ac  history.txt
asn1/vdchunk-base-0.2.10/src/: Makefile.am  Makefile.in  docu.cpp  lhexlib.cpp  lhexlib.h  vdchunk-base.cpp  vdchunk-base.h  vdchunk-simple.cpp  vdchunk-simple.h  vdctest.cpp
(+15 files in other folders)
