dnl Process this file with autoconf to produce a configure script
AC_INIT(vdchunk-base,0.2.10)
AC_CONFIG_SRCDIR(src/vdchunk-base.cpp)
AM_INIT_AUTOMAKE
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.

AC_PROG_INSTALL
AC_OUTPUT(Makefile)
AC_OUTPUT(src/Makefile)
